# ow-chat-logger

./: .gitignore  ITERATE.md  README.md  TASKS.md  buffer.py  build_exe.ps1  chat_logger.py  config.py  config_template.json  deduplication.py  hero_logger.py  image_processing.py  installer.iss  main.py  ocr_engine.py  parser.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
archive/: chatocr_v3.py  mouse_tracker.py  ocr_chat.py  ocr_debug.py  tts_logger.py  tts_test2.py
docs/internal/: ARCHITECTURE.md  CAPTURE_QUALITY_PRIORITIES.md  ITERATE.md  README.md  TASKS.md
docs/screenshots/: README.md
packaging/: nuitka_entry.py
src/ow_chat_logger/: __init__.py  __main__.py  _chat_db.py  analysis.py  benchmark.py  buffer.py  config.py  debug_snaps.py  deduplication.py  hero_roster.py  image_processing.py  live_runtime.py  log_export.py  log_search.py  logger.py  main.py  matcher.py  message_processing.py  metrics.py  ocr_engine.py  parser.py  pipeline.py
src/ow_chat_logger/gui/: app.py  (+10 more)
tests/: conftest.py  test_analysis.py  test_benchmark.py  test_buffer.py  test_cli.py  test_color_config_propagation.py  test_config_helpers.py  test_debug_snaps.py  test_deduplication.py  test_image_processing.py  test_live_runtime.py  test_log_export.py  test_log_search.py  test_logger.py  test_main_process.py  test_message_processing.py  test_metrics.py  test_nuitka_entry.py  test_ocr_backends.py  test_ocr_engine.py  test_parser.py  test_pipeline.py  test_regression_screenshots.py
tools/: analyze_fixture.py  dump_fixture.py  iter_regression.py  write_masks.py
(+44 files in other folders)
