[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "ow-chat-logger"
version = "0.1.0"
description = "Overwatch chat logger using OCR"
authors = [
    {name = "Unknown", email = "unknown@example.com"},
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["overwatch", "ocr", "chat", "logger"]

dependencies = [
    "numpy",
    "opencv-python",
    "easyocr",
    "pyautogui",
    "pillow",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
ow-chat-logger = "ow_chat_logger.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "ocr: screenshot / EasyOCR regression tests (use --run-ocr)",
]
addopts = "-ra"
